rosPart/log/build_2024-06-21_23-12-18/robotController/stderr.log
  File "/home/mik/robotica2/Project_Robotica/rosPart/install/robotController/lib/python3.10/site-packages/robotController/control_node.py", line 12
    def timer_callback(self)
                            ^
SyntaxError: expected ':'

